# parse-commit-gitdeps-xml

./: .gitignore  pyproject.toml
